bugs squashed

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,7 @@
 .bg_video {
   top: 0;
   left: 0;
-  opacity: 0.5;
+  opacity: 0.8;
   position: absolute;
   z-index: -9999;
   top: 0;
